# 1IAST-Fase1

./: Data_Science_Desafios.ipynb  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: EDA.ipynb  tech_challenge_nps.ipynb
