[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nps_analysis"
version = "0.0.1"
description = "An\u00e1lise explorat\u00f3ria de dados de um Case de NPS"
authors = [
  { name = "Grupo 41" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.14.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["nps_analysis"]
force_sort_within_sections = true


